[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/TrainingMode/TrainingMode.gd" type="Script" id=1]
[ext_resource path="res://scenes/SignalMessageQueue.gd" type="Script" id=2]
[ext_resource path="res://Users/Finger.gd" type="Script" id=3]
[ext_resource path="res://Users/Tapper.gd" type="Script" id=4]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/NewGame.png" type="Texture" id=6]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=2]

[node name="MainGame" type="Node2D"]
position = Vector2( 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="UserInterface" type="Control" parent="."]
margin_right = 1476.0
margin_bottom = 200.0

[node name="Tutorial" type="RichTextLabel" parent="UserInterface"]
margin_left = 33.0
margin_right = 1435.0
margin_bottom = 179.0
theme = SubResource( 3 )
custom_fonts/mono_font = SubResource( 4 )
custom_fonts/bold_italics_font = SubResource( 5 )
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 8 )
text = "Tutorial"

[node name="Finger" type="Area2D" parent="."]
position = Vector2( -130, 457 )
script = ExtResource( 3 )

[node name="FingerDiameter" type="CollisionShape2D" parent="Finger"]
shape = SubResource( 2 )

[node name="Tapper" type="Timer" parent="Finger"]
script = ExtResource( 4 )

[node name="SignalMessageQueue" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="NewGame" type="TouchScreenButton" parent="."]
position = Vector2( 69, 563 )
normal = ExtResource( 6 )
